--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -9,7 +9,16 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nude.API.Contracts\Nude.API.Contracts.csproj" />
+      <ProjectReference Include="..\Nude.API.Data\Nude.API.Data.csproj" />
       <ProjectReference Include="..\Nude\Nude.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.12">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
     </ItemGroup>
 
 </Project>
