--- a/src/Nude.API.Contracts/Nude.API.Contracts.csproj
+++ b/src/Nude.API.Contracts/Nude.API.Contracts.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Nude.Models\Nude.Models.csproj" />
+    </ItemGroup>
+
 </Project>
