--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Nude.API.Contracts\Nude.API.Contracts.csproj" />
       <ProjectReference Include="..\Nude.API.Data\Nude.API.Data.csproj" />
+      <ProjectReference Include="..\Nude.API.Infrastructure\Nude.API.Infrastructure.csproj" />
       <ProjectReference Include="..\Nude\Nude.csproj" />
     </ItemGroup>
 
