--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -11,10 +11,12 @@
       <ProjectReference Include="..\Nude.API.Contracts\Nude.API.Contracts.csproj" />
       <ProjectReference Include="..\Nude.API.Data\Nude.API.Data.csproj" />
       <ProjectReference Include="..\Nude.API.Infrastructure\Nude.API.Infrastructure.csproj" />
+      <ProjectReference Include="..\Nude.Mappers\Nude.Mappers.csproj" />
       <ProjectReference Include="..\Nude\Nude.csproj" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.12">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
