--- a/src/Nude.Tg.Bot/appsettings.json
+++ b/src/Nude.Tg.Bot/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Nude.API": {
-        "Url": "http://127.0.0.1"
+        "BaseUrl": "http://127.0.0.1:3001"
     },
     "Telegram": {
         "AccessToken": "5955339704:AAGNvEDwpB2GmrOwFZUJ2QYV6hNxIiD4JIM"
