feat: added Serilog to Nude.API, reviewed ParsingBgService

--- a/src/Nude.API.Data/Nude.API.Data.csproj
+++ b/src/Nude.API.Data/Nude.API.Data.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nude.Models\Nude.Models.csproj" />
+      <ProjectReference Include="..\Nude\Nude.csproj" />
     </ItemGroup>
 
 </Project>
