feat: Callback service to notify subscribers

--- a/src/Nude.Tg.Bot/appsettings.json
+++ b/src/Nude.Tg.Bot/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "Http": {
+        "Address": "http://127.0.0.1:7001/"
+    },
     "Nude.API": {
         "BaseUrl": "http://127.0.0.1:3001"
     },
