upd: review bot class folders

--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -37,4 +37,10 @@
       </None>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Http" />
+      <Folder Include="Services" />
+      <Folder Include="Telegram" />
+    </ItemGroup>
+
 </Project>
