--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -35,6 +35,9 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Messages\Start.md">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
