--- a/src/Nude.Tg.Bot/appsettings.json
+++ b/src/Nude.Tg.Bot/appsettings.json
@@ -2,6 +2,9 @@
     "Http": {
         "BaseUrl": "http://127.0.0.1:7001"
     },
+    "Resources": {
+        "Path": "./Resources"
+    },
     "Nude.API": {
         "BaseUrl": "http://127.0.0.1:3001"
     },
