--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -36,7 +36,7 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Messages\Start.md">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
 
