--- a/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
+++ b/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
@@ -10,6 +10,9 @@
       <Reference Include="Microsoft.AspNetCore.Http.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.13\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
       </Reference>
+      <Reference Include="Microsoft.Extensions.Hosting.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
+        <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.13\Microsoft.Extensions.Hosting.Abstractions.dll</HintPath>
+      </Reference>
       <Reference Include="Microsoft.Extensions.Logging.Abstractions, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60">
         <HintPath>..\..\..\..\..\..\..\..\..\Program Files\dotnet\shared\Microsoft.AspNetCore.App\6.0.13\Microsoft.Extensions.Logging.Abstractions.dll</HintPath>
       </Reference>
@@ -22,9 +25,6 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-      <PackageReference Include="Quartz" Version="3.6.2" />
-      <PackageReference Include="Quartz.Extensions.DependencyInjection" Version="3.6.2" />
-      <PackageReference Include="Quartz.Extensions.Hosting" Version="3.6.2" />
     </ItemGroup>
 
 </Project>
