--- a/src/Nude.API/appsettings.Development.json
+++ b/src/Nude.API/appsettings.Development.json
@@ -5,12 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Credentials": {
-    "NudeMoon": {
-      "FusionUser": "446221.ad21f16c541e88e36b390a7b3b863086",
-      "PhpSessionId": "bp0jrqnelup82t4pbg1jliu2n7"
-    }
-  },
+  "Credentials": { },
   "ConnectionStrings": {
     "Database": "Server=127.0.0.1;Port=5432;Database=Nude.API.Database;Uid=postgres;Pwd=secret;"
   }
