feat: added user-secrets to Nude.Console

--- a/src/Nude.Console/appsettings.json
+++ b/src/Nude.Console/appsettings.json
@@ -1,8 +1,3 @@
 {
-    "Credentials": {
-        "NudeMoon": {
-            "FusionUser": "446221.ad21f16c541e88e36b390a7b3b863086",
-            "PhpSessionId": "bp0jrqnelup82t4pbg1jliu2n7"
-        }
-    }
+    "Credentials": { }
 }
