--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -17,9 +17,8 @@
       </PackageReference>
       <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="6.0.1" />
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2-mauipre.1.22102.15" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.8" />
       <PackageReference Include="Polly" Version="7.2.3" />
       <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
