feat: failure callback process

--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -42,6 +42,9 @@
       <None Update="Resources\Messages\Menu.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Messages\CallbackFailed.md">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
