--- a/src/Nude.API/appsettings.json
+++ b/src/Nude.API/appsettings.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Authentication": {
+    "Jwt": {
+      "Issuer": "Nude.API",
+      "Audience": "Nude.API.Client",
+      "Key": "Super_Secret_KEY",
+      "Lifetime": "30"
+    }
   }
 }
