--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -10,7 +10,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nude.API.Contracts\Nude.API.Contracts.csproj" />
-      <ProjectReference Include="..\Nude.API.Data\Nude.API.Data.csproj" />
+      <ProjectReference Include="..\Nude.Data.Infrastructure\Nude.Data.Infrastructure.csproj" />
       <ProjectReference Include="..\Nude.API.Infrastructure\Nude.API.Infrastructure.csproj" />
       <ProjectReference Include="..\Nude.Mappers\Nude.Mappers.csproj" />
       <ProjectReference Include="..\Nude\Nude.csproj" />
