--- a/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
+++ b/src/Nude.Tg.Bot/Nude.Tg.Bot.csproj
@@ -28,7 +28,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Nude.API.Contracts\Nude.API.Contracts.csproj" />
-      <ProjectReference Include="..\Nude.API.Data\Nude.API.Data.csproj" />
+      <ProjectReference Include="..\Nude.Data.Infrastructure\Nude.Data.Infrastructure.csproj" />
       <ProjectReference Include="..\Nude.API.Infrastructure\Nude.API.Infrastructure.csproj" />
     </ItemGroup>
 
