--- a/src/Nude.API.Contracts/Nude.API.Contracts.csproj
+++ b/src/Nude.API.Contracts/Nude.API.Contracts.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Nude.API.Models\Nude.API.Models.csproj" />
       <ProjectReference Include="..\Nude.Models\Nude.Models.csproj" />
     </ItemGroup>
 
