--- a/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
+++ b/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <PackageReference Include="Kvyk.Telegraph" Version="1.1.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.14" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.2-mauipre.1.22102.15" />
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
