--- a/src/Nude.API/appsettings.json
+++ b/src/Nude.API/appsettings.json
@@ -12,5 +12,8 @@
       "Key": "Super_Secret_KEY",
       "Lifetime": "30"
     }
+  },
+  "Notifications": {
+      "CallbackUrl": "http://127.0.0.1:5000/callback"
   }
 }
