feat: jwt token generation

--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -36,4 +36,10 @@
       <_ContentIncludedByDefault Remove="store\credentials\[NudeMoon]Sparrow1488\file.json" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="key">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
