--- a/src/Nude.Bot.Tg/appsettings.json
+++ b/src/Nude.Bot.Tg/appsettings.json
@@ -6,7 +6,7 @@
         "Path": "./Resources"
     },
     "Nude.API": {
-        "BaseUrl": "http://127.0.0.1:3001/v2"
+        "BaseUrl": "http://127.0.0.1:3001"
     },
     "Credentials": { },
     "ConnectionStrings": {
