feature: added new message to bot

--- a/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
+++ b/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
@@ -41,6 +41,9 @@
       <None Update="appsettings.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Messages\PicByTagInfo.md">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
       <None Update="Resources\Messages\Start.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
