--- a/src/Nude.API/appsettings.json
+++ b/src/Nude.API/appsettings.json
@@ -7,5 +7,9 @@
   },
   "Notifications": {
       "CallbackUrl": "http://127.0.0.1:5000/callback"
+  },
+  "Storage": {
+    "BasePath": "./wwwroot/data/files",
+    "BaseUrlPath": "/data/files"
   }
 }
