--- a/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
+++ b/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
@@ -21,6 +21,7 @@
       <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Polly" Version="7.2.3" />
+      <PackageReference Include="RandN" Version="0.4.0" />
     </ItemGroup>
 
 </Project>
