--- a/src/Nude.Bot.Tg/appsettings.json
+++ b/src/Nude.Bot.Tg/appsettings.json
@@ -10,6 +10,6 @@
     },
     "Credentials": { },
     "ConnectionStrings": {
-        "Database": "Server=127.0.0.1;Port=5432;Database=Nude.Tg.Bot;Uid=postgres;Pwd=ujif1357924680;"
+        "Database": "Server=127.0.0.1;Port=5432;Database=Nude.Tg.Bot;Uid=postgres;Pwd=secret;"
     }
 }
