--- a/src/Nude.API/appsettings.Development.json
+++ b/src/Nude.API/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "Credentials": { },
   "ConnectionStrings": {
-    "Database": "Server=127.0.0.1;Port=5432;Database=Nude.API.Database;Uid=postgres;Pwd=ujif1357924680;"
+    "Database": "Server=127.0.0.1;Port=5432;Database=Nude.API.Database;Uid=postgres;Pwd=secret;"
   }
 }
