feat: move IParserCreator to Nude

--- a/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
+++ b/src/Nude.API.Infrastructure/Nude.API.Infrastructure.csproj
@@ -24,4 +24,8 @@
       <PackageReference Include="RandN" Version="0.4.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Services\Creators" />
+    </ItemGroup>
+
 </Project>
