upd: ignore route to PictagEndpoint Nude.Bot.Tg

--- a/src/Nude.API/Nude.API.csproj
+++ b/src/Nude.API/Nude.API.csproj
@@ -34,6 +34,95 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="store\credentials\[HentaiChan]Kill_solt\file.json" />
       <_ContentIncludedByDefault Remove="store\credentials\[NudeMoon]Sparrow1488\file.json" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\04e95c666bfc4dc8ba03f62c7114f6ad.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\0ed8645197b9418eb568bfb3358bfd32.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\1573900c4e5140f7b5fab63afe162abc.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\1acef61cc5c0452296d0907e7fbf72a2.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\1c1fb6799d3d4682b90138d6f16692b8.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\1cc3c81227e148b98b03519236ebb5d4.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\1e8bfe111bae4b478ff117cc1058fdce.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\2098f87a93f14387832130217187c685.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\213dec0e504d413f9dd9564d918fa857.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\2e163234560640ecaeedefc83dca7107.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\2f59c285c1244e3c8d16743e567d7fe3.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\2f755235a86049acabb5c286f6ff60f0.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\39655bcf18654c5b81f2f4d9cff2dc19.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\3f1edb28c77041cbb4a575be6c47301e.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\499e98ea4c424458b2d4d0d4fd653082.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\4c60de3e48a141a2a0650bf8e1f47159.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\4d263b72366d44459d18c91b23f122d0.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\4f3c6fd5dda0402a9d7fb4e63c9be4ec.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\4f8e0026319347a9a325d9bcc5501649.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\55c5f70bbffc40e98719536480cf46d6.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\568ee2090d31444fab140e2bf67dfee2.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\59973ac9ce2d4d0fa09b1401b5b14b7e.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\5ce3eb05cf0843d5a4520bfc20f28dbb.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\61c138914fa545fea013dccbdd04ac9b.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\6301c951e3964efa97194f84883bba38.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\680294bcb6bd490ba5160a38be26596f.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\69ab2d056aae41f6a038c825a8bd8408.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\69ad2376e77c41bd931b4142ca4dda99.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\69d9414f3c6f4cd0acab1ab40effbb9b.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\69f74300b6014aecbe792fdbfe6517cb.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\6ca287378dc445daa8c6b51ab3af6d11.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\6dd632bb47974b7ca166cfca01777314.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\6e44b25ad64341eea09f4c046a7df0a4.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\72a4ad4da6ac43eca25cf0b190dd1a70.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\758f756df7bb4a7c90bf8663acb82638.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\795fa54b146146aeb4523ef107b878c0.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\7a79f57cb7534fa0b75f9c60757c48a1.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\7c84d6210cc74b6bb66c6c826d9040e9.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\7d403e34710140dca1f93c67bd595e46.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\801ffe998c6745089a011cca4a9aa2af.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\814ca36ff72f4a8e902f6b1461c27076.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\8528b82b0f544656b3a78a61a5fdb9b9.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\873e51256dd940bb8f32be7e857dd101.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\88506c74b2ef45929604d07bc1ffc605.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\8a4d047eaee84c03bd61cb7c8d443d6c.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\92f02fe75ee4489f95e3411dde34f847.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\95569b8b968e453294d008f00dad5735.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\97adfeb497b14b8b8f41b451b7413a56.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9952561f96314db8b30d534c67d943ef.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\99c993fcd8cc46759cf9538b4e12ac8f.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9b6e4381322a4fadb1f6ce1490645564.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9c06e1de9f0d416fa22eaba2b1964245.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9c6897f94f0d419daea02f0bd0240a9d.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9cbfb5590903454a9ec537df3bcc8043.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9d5f0e05cd5a4d24be4944c2db6a2bd7.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9e64e6dfe01341929ad82ef7b2fed1a2.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\9f4b9d7c2830477cb534afc9b61b88e7.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\a0b460c143e74c00a92c6645942b97e6.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\a16f0206a745423b952915e31ced8db6.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\a208b335a40243229c5a030ee3fb95b3.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\a9fba8c6b49e42f2b361c5fe499decab.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\af5a30eef5de4bb2a5175537d395842d.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\b38711f8ab834e9b88ac775080aa180a.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\b585c504c10843df8af861551463f61f.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\b8b549782b164bc6be543feebb4ed185.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\b8c0d12968ee434087a5f9fee9510413.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\b9a02a3aef1447faabcf5c1a8a379df9.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\c3ff2c44cd0b42c295b4da241fc3233c.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\c6a454948c3a4f2c8089248e4b71b895.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\c92f6a0cc97c4f90a9c46cb1bd7a7730.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\cc981c8a86654d44a69568b3179ad29d.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\cd8c028f570f4c8fb70d530d7d7eccb8.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\cde756a540c6452da18338e55beea6e0.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\d1a51858014f4d5ca73038e9b19551f5.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\d41431057ed5498aa1ffac792a6a3e19.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\db50ce78e6a0400db9f309f0d5e7c3ee.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\dbea005e3e7e46f38eb90bf940127434.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\dd9e7437dca94ec383fba145de20db51.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\de16bbcb0f3743d4acdd642e04b36ba6.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\de52b9868048495e96259111d7c2ed90.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\e07fe59f7a514604869921f430221428.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\e5bf0aa710c24eafb85f972e2106ac5b.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\e69974059530491b96a4d637b7455ee9.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\f123b6049e2c451da091f8f9ee092b2c.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\f602decdcb8249218e5af7615a69070f.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\f6a2fd420c2947b7bf219011bb196c66.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\fc5e1c44299445e092dda164046a6324.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\fe77a931e8334275adce609bdee29f76.jpeg" />
+      <_ContentIncludedByDefault Remove="wwwroot\data\files\feb89e95cfb34dc599bafa52d5d60dc7.jpeg" />
     </ItemGroup>
 
     <ItemGroup>
