--- a/src/Nude.Bot.Tg/appsettings.json
+++ b/src/Nude.Bot.Tg/appsettings.json
@@ -9,7 +9,7 @@
         "BaseUrl": "http://127.0.0.1:3001"
     },
     "Credentials": { },
-    "ConnectionStrings": {
-        "Database": "Server=127.0.0.1;Port=5432;Database=Nude.Tg.Bot;Uid=postgres;Pwd=secret;"
-    }
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1;Port=5432;Database=Nude.Tg.Bot;Uid=postgres;Pwd=ujif1357924680;"
+  }
 }
