--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 # Media files
 wwwroot/
 
+# App config files
+appsettings.json
+appsettings.Development.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
