feat: Development & Production conf files

--- a/src/Nude.API/appsettings.json
+++ b/src/Nude.API/appsettings.json
@@ -11,5 +11,8 @@
   "Storage": {
     "BasePath": "./wwwroot/data/files",
     "BaseUrlPath": "/data/files"
+  },
+  "ConnectionStrings": {
+    "Database": "Server=127.0.0.1;Port=1337;Database=Nude.API;Uid=postgres;Pwd=624Fi83tYJHSxv75;"
   }
 }
