--- a/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
+++ b/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
@@ -33,7 +33,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="appsettings.json">
+      <None Update="appsettings.Development.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Resources\Messages\PicByTagInfo.md">
