--- a/src/Nude.Bot.Tg/appsettings.json
+++ b/src/Nude.Bot.Tg/appsettings.json
@@ -1,15 +1,22 @@
 {
-  "Http": {
-      "BaseUrl": "http://127.0.0.1:5000"
-  },
-  "Resources": {
-      "Path": "./Resources"
-  },
-  "Nude.API": {
-      "BaseUrl": "http://127.0.0.1:3001"
-  },
-  "Credentials": { },
-  "ConnectionStrings": {
-    "Database": "Server=127.0.0.1;Port=5432;Database=Nude.Tg.Bot;Uid=postgres;Pwd=secret;"
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information"
+        }
+    },
+    "Http": {
+        "BaseUrl": "http://127.0.0.1:5000"
+    },
+    "Resources": {
+        "Path": "./Resources"
+    },
+    "Nude.API": {
+        "BaseUrl": "http://127.0.0.1:3001"
+    },
+    "Credentials": { },
+    "ConnectionStrings": {
+        "Database": "Server=127.0.0.1;Port=1337;Database=Nude.Telegram;Uid=postgres;Pwd=624Fi83tYJHSxv75;"
+    }
 }
