upd: config files

--- a/src/Nude.API/appsettings.Development.json
+++ b/src/Nude.API/appsettings.Development.json
@@ -5,7 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "Credentials": { },
+  "Notifications": {
+    "CallbackUrl": "http://127.0.0.1:5000/callback"
+  },
+  "Storage": {
+    "BasePath": "./wwwroot/data/files",
+    "BaseUrlPath": "/data/files"
+  },
   "ConnectionStrings": {
     "Database": "Server=127.0.0.1;Port=5432;Database=Nude.API.Database;Uid=postgres;Pwd=secret;"
   }
