--- a/src/Nude.Bot.Tg/Properties/launchSettings.json
+++ b/src/Nude.Bot.Tg/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Nude.Bot.Tg": {
       "commandName": "Project",
+      "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
