--- a/src/Nude.Bot.Tg/Properties/launchSettings.json
+++ b/src/Nude.Bot.Tg/Properties/launchSettings.json
@@ -6,6 +6,13 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Nude.Bot.Tg:Production": {
+      "commandName": "Project",
+      "applicationUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Production"
+      }
     }
   }
 }
