--- a/src/Nude.API/appsettings.json
+++ b/src/Nude.API/appsettings.json
@@ -13,6 +13,6 @@
     "BaseUrlPath": "/data/files"
   },
   "ConnectionStrings": {
-    "Database": "Server=127.0.0.1;Port=1337;Database=Nude.API;Uid=postgres;Pwd=624Fi83tYJHSxv75;"
+    "Database": "Server=127.0.0.1;Port=1337;Database=Nude.API;Uid=postgres;Pwd=hitlerdidnothingwrong;"
   }
 }
