--- a/src/Nude.Bot.Tg/appsettings.json
+++ b/src/Nude.Bot.Tg/appsettings.json
@@ -17,6 +17,6 @@
     },
     "Credentials": { },
     "ConnectionStrings": {
-        "Database": "Server=127.0.0.1;Port=1337;Database=Nude.Telegram;Uid=postgres;Pwd=624Fi83tYJHSxv75;"
+        "Database": "Server=127.0.0.1;Port=1337;Database=Nude.Telegram;Uid=postgres;Pwd=hitlerdidnothingwrong;"
     }
 }
