--- a/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
+++ b/src/Nude.Bot.Tg/Nude.Bot.Tg.csproj
@@ -51,6 +51,9 @@
       <None Update="Resources\Messages\Profile.md">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Resources\Messages\BlacklistHelp.md">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
